// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
  disabled={false}
>
  <input
    checked={null}
    className="Checkbox__CheckboxInput-sc-1gwp7am-2 cHALbI"
    id="Checkbox"
    onBlur={null}
    onChange={null}
    onFocus={null}
    type="checkbox"
  />
  <label
    className="Typography__StyledLabel-sc-19auepv-0 hskbRy"
    fontSize="0.879em"
    fontWeight={400}
    htmlFor="Checkbox"
    letterSpacing="0.4px"
  >
    Checkbox
  </label>
</div>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
  id={null}
  rows={null}
>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
    disabled={false}
  >
    <input
      checked={true}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 cHALbI"
      id="Checked"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor="Checked"
      letterSpacing="0.4px"
    >
      Checked
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 cHALbI"
      id="Unchecked"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor="Unchecked"
      letterSpacing="0.4px"
    >
      Unchecked
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 gxdWlF"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 biqtvl"
      id="Error"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor="Error"
      letterSpacing="0.4px"
    >
      Error
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 loOzdz"
    disabled={true}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 kcLpFG"
      id="Disabled"
      onBlur={null}
      onChange={null}
      onFocus={null}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor="Disabled"
      letterSpacing="0.4px"
    >
      Disabled
    </label>
  </div>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
  id={null}
  rows={null}
>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 cHALbI"
      id="Left Aligned"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor="Left Aligned"
      letterSpacing="0.4px"
    >
      Left Aligned
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hTLhND"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 cHALbI"
      id="Right Aligned"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor="Right Aligned"
      letterSpacing="0.4px"
    >
      Right Aligned
    </label>
  </div>
</section>
`;

exports[` 4`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 cngVTJ"
    id={null}
    rows={null}
  >
    <section
      className="Form__Section-v2wrel-3 wHYQL"
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 eFKeiu Form__GroupTitle-v2wrel-2 dgUYZh"
        fontSize="0.75em"
        fontWeight={600}
        id={null}
        letterSpacing="0.4px"
      >
        Checkbox Group (2 Columns)
      </p>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 cngVTJ"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Checkbox__CheckboxWrapper-sc-1gwp7am-0 cfHVch"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 cRSilm Checkbox__InputGroup-sc-1gwp7am-3 LNZza"
            id={null}
            rows={null}
          >
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-2 cHALbI"
                id="Checkbox-1"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor="Checkbox-1"
                letterSpacing="0.4px"
              >
                Checkbox 1
              </label>
            </div>
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-2 cHALbI"
                id="Checkbox-2"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor="Checkbox-2"
                letterSpacing="0.4px"
              >
                Checkbox 2
              </label>
            </div>
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-2 cHALbI"
                id="Checkbox-3"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor="Checkbox-3"
                letterSpacing="0.4px"
              >
                Checkbox 3
              </label>
            </div>
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-2 cHALbI"
                id="Checkbox-4"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hskbRy"
                fontSize="0.879em"
                fontWeight={400}
                htmlFor="Checkbox-4"
                letterSpacing="0.4px"
              >
                Checkbox 4
              </label>
            </div>
          </section>
        </section>
      </section>
    </section>
  </section>
</form>
`;
